# modern-internet-speed-meter

./: .gitignore  LICENSE  PRIVACY_POLICY.md  README.md  package-lock.json  package.json
scripts/: clean-installers.js
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  speedtest.rs  telemetry.rs
src/lib/: processGroups.js  settingsStore.js
src/routes/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/settings/: +page.svelte
static/: _redirects
